# ladybug

./: Cargo.toml  Dockerfile  README.md  config.ldbg  config_example  design.md  run.sh
_src/: config.rs  main.rs  print.rs  resolver.rs
_src/commands/: add.rs  deploy.rs  topic.rs
_src/topic/: deploy.rs  hook.rs
common/: Cargo.toml
common/src/: command.rs  lib.rs  rel_path.rs
data/: Cargo.toml
data/src/: lib.rs
dotfiles/fish/: config.fish  fish.ldbg
dotfiles/git/: config  git.ldbg
dotfiles/helix/: config.toml  helix.ldbg
dotfiles/main/: main.ldbg
dotfiles/qt5ct/: qt5ct.conf  qt5ct.ldbg
dotfiles/qt5ct/colors/: Vimix-light.conf
dotfiles/rust/: rust.ldbg
dotfiles/signal/: signal.ldbg
eval/: Cargo.toml
eval/src/: error.rs  lib.rs
interpreter/: Cargo.toml
interpreter/src/: error.rs  lib.rs  provider.rs  structures.rs
interpreter/src/provider/: files.rs  flatpak.rs  zypper.rs
parser/: Cargo.toml
parser/src/: lexer.rs  lib.rs  parser.rs  span.rs  test_utils.rs
parser/src/lexer/tests/: collections.rs
pkit_zbus/: Cargo.toml
pkit_zbus/src/: lib.rs  offline.rs  package_kit.rs  transaction.rs
provider/: Cargo.toml
provider/src/: files.rs  flatpak.rs  lib.rs  packagekit.rs  privileged.rs  zypper.rs
src/: commands.rs  config.rs  context.rs  env.rs  fs.rs  glob.rs  main.rs  print.rs  rel_path.rs  resolver.rs  serde.rs  shell.rs  topic.rs  unit.rs
src/commands/: add.rs  capture.rs  deploy.rs  remove.rs  topic.rs
src/topic/: deploy.rs  deployer.rs  factory.rs  hook.rs  interpreter.rs  parser.rs  registry.rs
src/topic/interpreter/: parser.rs  provider.rs  structures.rs
src/topic/interpreter/provider/: files.rs  zypper.rs
src/unit/: interpreter.rs
src/unit/interpreter/: error.rs  provider.rs  structures.rs
src/unit/interpreter/provider/: files.rs  flatpak.rs  zypper.rs
~/test/: hello.txt  ladybug.toml
~/test2/: ladybug.toml  test2.txt
