[package]
name = "ladybug"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "3.2.15", features = ["derive", "color"]}
toml = "0.5.9"
serde = {version = "1.0.140", features = ["derive"]}
directories-next = "2.0.0"
color-eyre = "0.6.2"
globwalk = "0.8.1"
figment = {version = "0.10.6", features = ["toml"]}
tracing = "0.1.35"
tracing-subscriber = "0.3.15"
chumsky = "0.8.0"

[dev-dependencies]
tempfile = "3.3.0"

[profile.dev.package.backtrace]
opt-level = 3
