[workspace]
members = ["parser", "interpreter", "common"]

[package]
name = "ladybug"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
interpreter = { path = "interpreter" }
common = { path = "common" }
clap = { version = "3.2.15", features = ["derive", "color"] }
toml = "0.5.9"
serde = { version = "1.0.140", features = ["derive"] }
directories-next = "2.0.0"
color-eyre = "0.6.2"
tracing = "0.1.35"
tracing-subscriber = "0.3.15"
ariadne = "0.1.5"
nix = { version = "0.25.0", default-features = false, features = ["user"] }
thiserror = "1.0.32"

[profile.dev.package.backtrace]
opt-level = 3
