[workspace]
members = ["parser", "interpreter", "common"]

[package]
name = "ladybug"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parser = { path = "parser" }
interpreter = { path = "interpreter" }
common = { path = "common" }
clap = { version = "4.1.8", features = ["derive", "color"] }
directories-next = "2.0.0"
color-eyre = "0.6.2"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
ariadne = "0.2.0"
nix = { version = "0.26.2", default-features = false, features = ["user"] }
thiserror = "1.0.39"

[profile.dev.package.backtrace]
opt-level = 3
