[package]
name = "interpreter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parser = { path = "../parser" }
common = { path = "../common" }
color-eyre = "0.6.2"
ariadne = "0.2.0"
thiserror = "1.0.39"
tracing = "0.1.37"
quick-xml = "0.28.0"
timeout-readwrite = "0.3.3"
nix = { version = "0.26.0", default-features = false, features = ["fs"] }

[dev-dependencies]
tempfile = "3.4.0"
