[package]
name = "provider"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parser = { path = "../parser" }
eval = { path = "../eval" }
common = { path = "../common" }
color-eyre = "0.6.2"
tracing = "0.1.37"
ariadne = "0.2.0"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0.40"
quick-xml = "0.28.0"
timeout-readwrite = "0.3.3"
