[package]
name = "provider"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parser = { path = "../parser" }
eval = { path = "../eval" }
common = { path = "../common" }
data = { path = "../data" }
pkit_zbus = { path = "../pkit_zbus" }
zbus = "5.5.0"
color-eyre = "0.6.2"
tracing = "0.1.37"
ariadne = "0.2.0"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0.40"
quick-xml = "0.28.0"
timeout-readwrite = "0.3.3"
bincode = "1.3.3"
nix = "0.26.2"
ref-cast = "1.0"

[dev-dependencies]
tempfile = "3.4.0"
